feat: implementar sistema de assinaturas e relatórios em PDF
- Criação das entidades, repositórios e DTOs para PlanoAssinatura, AssinaturaCliente e UsoAssinatura.
- Implementação do AssinaturaService e AssinaturaController com regras de negócio para criação de planos, vinculação de clientes e controle de saldo de cortes.
- Estruturação inicial da integração e webhook com o Mercado Pago.
- Adição dos scripts DDL (Migration) para as novas tabelas do banco de dados.
- Implementação do GeradorPdfService utilizando Thymeleaf para conversão de HTML em PDF.
- Criação do template visual HTML/CSS (relatorio.html) para exportação do extrato financeiro.
- Configuração de liberação de rotas do webhook no SecurityFilter.